# TandaPlayer

./: CMakeLists.txt  README.md  TandaPlayer.pro  common.h  controlswidget.cpp  controlswidget.h  cortina.cpp  cortina.h  default.qss  displaywidget.cpp  displaywidget.h  lambdafilterproxymodel.cpp  lambdafilterproxymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mimefilterproxymodel.cpp  mimefilterproxymodel.h  playlist.cpp  playlist.h  playlistitem.cpp  playlistitem.h  playlistmodel.cpp  playlistmodel.h  playlistview.cpp  playlistview.h  resources.qrc  tanda.cpp  tanda.h  tandadelegate.h  tandatreeitem.cpp  tandatreeitem.h  tandatreemodel.cpp  tandatreemodel.h  tandawidget.cpp  tandawidget.h  todo.txt  track.cpp  track.h  wavewidget.cpp  (+1 more)
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform-qt-clang.yml  cmake-single-platform.yml
tests/: CMakeLists.txt  playlist_tests.cpp
